# buddy-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  bwsnn.tar  requirements.txt
frontend/: CMakeLists.txt
frontend/Python/: frontend.py
frontend/Python/graph/: graph.py  operation.py  type.py
frontend/Python/ops/: func.py  linalg.py  tosa.py  utils.py
